--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "9f8e05f7",
    "metadata": {},
    "outputs": [
@@ -25,9 +25,7 @@
       "  %reload_ext autoreload\n",
       "Downloading Mini Speech Commands dataset...\n",
       "Download complete.\n",
-      "Extracting dataset...\n",
-      "Extraction complete.\n",
-      "Deleting zip file...\n"
+      "Dataset already extracted.\n"
      ]
     }
    ],
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "da9b596c",
    "metadata": {},
    "outputs": [
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3bde6c8",
    "metadata": {},
    "outputs": [
@@ -114,7 +112,6 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1, 576, 81])\n",
-      "torch.Size([1, 1, 16000])\n",
       "torch.Size([1, 576, 81])\n"
      ]
     }
@@ -129,6 +126,40 @@
     "# Test the preprocessor with the example audio\n",
     "x = preprocessor(audio)\n",
     "print(x.shape) # (B, C, T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0a0f9c14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of parameters in preprocessor: 1695456\n",
+      "Size of preprocessor model: 6.47 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_params = sum(p.numel() for p in preprocessor.parameters())\n",
+    "print(f\"Total number of parameters in preprocessor: {total_params}\")\n",
+    "\n",
+    "def diskSizeOfModel(model):\n",
+    "    numBytesPerParameter = torch.tensor([], dtype=torch.float32).element_size() # A 32-bit float takes 4 bytes\n",
+    "    tensorSizeBytes = sum(p.numel() for p in model.parameters()) * numBytesPerParameter\n",
+    "    # human readable size\n",
+    "    if tensorSizeBytes < 1024:\n",
+    "        return f\"{tensorSizeBytes} bytes\"\n",
+    "    elif tensorSizeBytes < 1024**2:\n",
+    "        return f\"{tensorSizeBytes / 1024:.2f} KB\"\n",
+    "    elif tensorSizeBytes < 1024**3:\n",
+    "        return f\"{tensorSizeBytes / 1024**2:.2f} MB\"\n",
+    "    else:\n",
+    "        return f\"{tensorSizeBytes / 1024**3:.2f} GB\"\n",
+    "print(f\"Size of preprocessor model: {diskSizeOfModel(preprocessor)}\")"
    ]
   }
  ],
