Update README and main notebook for clarity; fix AudioPreprocessor forward method

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9f8e05f7",
    "metadata": {},
    "outputs": [
@@ -23,8 +23,7 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "Downloading Mini Speech Commands dataset...\n",
-      "Download complete.\n",
+      "Zip file already exists, skipping download.\n",
       "Dataset already extracted.\n"
      ]
     }
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "da9b596c",
    "metadata": {},
    "outputs": [
@@ -103,50 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b3bde6c8",
+   "execution_count": 5,
+   "id": "6a3e66f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 576, 81])\n",
-      "torch.Size([1, 576, 81])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from model import AudioPreprocessor\n",
-    "\n",
-    "preprocessor = AudioPreprocessor(288)\n",
-    "x = preprocessor(torch.randn(1, 1, 16000)) # (batch_size, num_channels, num_samples)\n",
-    "print(x.shape) # (B, C, T)\n",
-    "\n",
-    "# Test the preprocessor with the example audio\n",
-    "x = preprocessor(audio)\n",
-    "print(x.shape) # (B, C, T)"
+    "moonshineBaseConfig = {\n",
+    "    \"preprocesserDims\": 288,\n",
+    "    \"innerDim\": 288,\n",
+    "    \"nHead\": 8,\n",
+    "    \"nEncoder\": 6,\n",
+    "    \"nDecoder\": 6\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "0a0f9c14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of parameters in preprocessor: 1695456\n",
-      "Size of preprocessor model: 6.47 MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "total_params = sum(p.numel() for p in preprocessor.parameters())\n",
-    "print(f\"Total number of parameters in preprocessor: {total_params}\")\n",
-    "\n",
     "def diskSizeOfModel(model):\n",
     "    numBytesPerParameter = torch.tensor([], dtype=torch.float32).element_size() # A 32-bit float takes 4 bytes\n",
     "    tensorSizeBytes = sum(p.numel() for p in model.parameters()) * numBytesPerParameter\n",
@@ -158,8 +134,36 @@
     "    elif tensorSizeBytes < 1024**3:\n",
     "        return f\"{tensorSizeBytes / 1024**2:.2f} MB\"\n",
     "    else:\n",
-    "        return f\"{tensorSizeBytes / 1024**3:.2f} GB\"\n",
-    "print(f\"Size of preprocessor model: {diskSizeOfModel(preprocessor)}\")"
+    "        return f\"{tensorSizeBytes / 1024**3:.2f} GB\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b3bde6c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 288, 40])\n",
+      "Total number of parameters in preprocessor: 1695456, with disk size of 6.47 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from model import AudioPreprocessor\n",
+    "\n",
+    "preprocessor = AudioPreprocessor(dim=moonshineBaseConfig[\"preprocesserDims\"])\n",
+    "x = preprocessor(torch.randn(1, 1, 16000)) # (batch_size, num_channels, num_samples)\n",
+    "\n",
+    "# Test the preprocessor with the example audio\n",
+    "x = preprocessor(audio)\n",
+    "print(x.shape) # (B, C, T)\n",
+    "\n",
+    "total_params = sum(p.numel() for p in preprocessor.parameters())\n",
+    "print(f\"Total number of parameters in preprocessor: {total_params}, with disk size of {diskSizeOfModel(preprocessor)}\")"
    ]
   }
  ],
