Add onnx version for comparison

--- a/main.ipynb
+++ b/main.ipynb
@@ -44,6 +44,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(37209) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -269,6 +276,64 @@
     "print(out.shape)\n",
     "\n",
     "print(diskSizeOf(net))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a36e9b0",
+   "metadata": {},
+   "source": [
+    "# Onnx Runtime version of the original model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b098be4",
+   "metadata": {},
+   "source": [
+    "They seem to be using the [HF tokenizers](https://github.com/huggingface/tokenizers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "80096df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aj/Projects/deep-learning/moonshine/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "python(36944) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from moonshine_onnx import MoonshineOnnxModel\n",
+    "\n",
+    "onnxMoonshine = MoonshineOnnxModel(model_name=\"tiny\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6ae25145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 40, 288)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = audio.numpy().reshape(1,-1)\n",
+    "hiddenState = onnxMoonshine.encoder.run(None, dict(input_values=X))[0]\n",
+    "print(hiddenState.shape)"
    ]
   }
  ],
